src/App.css
* {
  box-sizing: border-box;
  color: #333;
}
body {
  overflow-y: scroll;
}

.header{
  margin-top: 30px;
  display:block;
  text-align:center
}
.pokeball{
  max-width: 9%;
}

.searchBar{
}


.searchBox{
  display: block;
  margin : 0 auto;
  margin-top: 20px;
  margin-bottom: 30px;
  padding: 6px;
  width: 35%;
  border: 3px solid #017698;
  border-radius: 5px;
}

.pokegrid{
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  flex-wrap:wrap;
  margin-left: 80px;
  margin-right:80px;
}


.container{
  margin: 20px;
  padding: 10px;
  border-radius: 5px;
  border: solid;
  border-color:#017698;
  background-color:#ebebeb4f;
  box-shadow:  -1px 1px #77aaff,
              -2px 2px #77aaff,
              -3px 3px #77aaff,
              -4px 4px #77aaff,
              -5px 5px #77aaff;
}

.container:hover{
  cursor: pointer;
  background-color: rgb(235, 235, 235);
}

.container:active{
  background-color: rgb(172, 172, 172);
}

.pokeimages{
  width: 135px;
  height: 135px;
}

.pokename{
  text-align: center;
  color:#017698;
  text-decoration: underline;
}

.loader{
font-weight: bold;
text-align: center;
}

.dex{
  padding:20px;
}

.desc{
  margin: auto;
  display:flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 600px;
}

.screenPanel{
  border-style: solid;
  flex:1;
  background-color: #C9172C;
  border-radius: 10px;
  min-width: 250px;
}

.infoPanel{
  flex:1;
  border-style: solid;
  border-radius:10px;
  min-width: 250px;
  background-color:#C9172C;
}

.image{
  width: 130px;
  height: 130px;
}


.detail{
margin: 20px;
background-color: #E0FAF9;
border: solid 4px black;
border-radius: 9px;
display:flex;
flex-direction: column;

}

.screenPanelTop{
  display:flex;
}

.camled{
  flex:2;
}
.speakers{
  flex:1;
  display:flex;
  justify-content: flex-end;
  margin-right: 20px;
  
}

.speakerHole{
  position: relative;
  width: 2px;
  height: 25px;
  border: solid 2px black;
  border-radius: 50%;
  top: 10px;
  margin-right:2px;
}

.camera {
  position: relative;
  top: 10px;
  left: 10px;
  border-radius: 50%;
  border: solid 6px #196A9E;
  width: 30px;
  height: 30px;
  background-color: #28A9FC;
  display: inline-block;
}

.led {
  position: relative;
  left: 15px;
  top: 7px;
  border-radius: 50%;
  border: solid 2px rgb(0, 109, 0);
  width: 10px;
  height: 10px;
  background-color: greenyellow;
  display: inline-block;
}

.screen {
  background-color: #E0FAF9;
  margin: 20px;
  border: solid 4px black;
  border-radius: 9px;
  display: flex;
  justify-content: center;
  padding-top: 5px;
  padding-bottom: 5px;
}

.sideButtons{
  display:flex;
  justify-content: space-between;
  padding-left:30px;
  padding-right:30px;
  padding-bottom: 10px;
}

.rightSideButton{
  width: 0; 
  height: 0; 
  border-top: 10px solid transparent;
  border-bottom: 10px solid transparent; 
  border-left:10px solid blue; 
  position: relative;
  bottom: 10px; 
}



.leftSideButton{
  width: 0; 
  height: 0; 
  border-top: 10px solid transparent;
  border-bottom: 10px solid transparent; 
  border-right:10px solid blue; 
  position: relative;
  bottom: 10px;

}


.buttonPanel {
  display: flex;
  height: 80px;
  position: relative;
  bottom: 12px;
}

.abButtons{
  flex:1.8;
}

.aButton{
  border: 1px solid #51975b;
  border-radius: 50%;
  width: 30px;
  height: 30px;
  position: relative;
  margin: 0 auto;
  background-color: #55b263;
}

.bButton{
  border: 1px solid #66a386;
  border-radius: 50%;
  width: 30px;
  height: 30px;
  position: relative;
  margin: 0 auto;
  right: 25px;
  background-color: #6fcb9f;
}

.arrowButtons{
  flex:1;
}

.up{
    width: 25px;
    height: 20px;
    background-color: #9b9999;
    border-top-left-radius: 10%;
    border-top-right-radius: 10%;
    box-shadow: -2px 0px 0px #767575;

}

.center{
  width: 25px;
  height: 20px;
  background-color: #9b9999;
}

.down{
    width: 25px;
    height: 20px;
    background-color: #9B9995;
    border-bottom-right-radius: 10%;
    border-bottom-left-radius: 10%;
    box-shadow: -2px 0px #767575;
}


.left{
    width: 25px;
    height: 20px;
    position: relative;
    bottom: 40px;
    right: 25px;
    background-color: #9b9999;
    border-top-left-radius: 10%;
    border-bottom-left-radius: 10%;
    box-shadow: -2px 0px #767575;
}

.right{
    width: 25px;
    height: 20px;
    position: relative;
    bottom: 60px;
    left: 25px;
    background-color: #9b9999;
    border-top-right-radius: 10%;
    border-bottom-right-radius: 10%;
}

.item{
  display:flex;
  margin:0;
  padding-top: 5px;
  padding-bottom:5px;

}
.item:nth-of-type(odd) {
  background: rgb(135, 253, 249);
}

.name{
  margin:0 auto;
}

.field{
  flex: 2;
  padding-left: 10px;
}
.values{
  flex:3;
  display:flex;
  justify-content: space-evenly;
}

.description{
  background-color: rgb(247, 247, 234);
  margin:0;
  padding:10px;
  text-align:left;
  border: solid #f0c544;
  border-radius: 5px;
}

.types{
  border-radius: 7px;
  padding-left: 2px;
  padding-right: 2px;
  margin-right:2px;
}

.error{
  text-align: center;
  font-weight: bold;
}
.electric{
  background-color: rgb(204,204,0);
  color:white;
}

.water{
  background-color: navy;
  color:white;
}

.grass{
  background-color: darkgreen;
  color:white;
}

.poison{
  background-color: purple;
  color:white;
}

.flying{
  background-color: #A890F0;
  color:white;
}

.fire{
  background-color: #F08030;
  color:white;
}

.bug{
  background-color: #A8B820;
  color:white;
}

.normal{
  background-color: #A8A878;
  color:white;
}

.ground{
  background-color: #E0C068;
  color:white;
}

.fairy{
  background-color: #EE99AC;
  color:white;
}

.fighting{
  background-color: #C03028;
  color:white;
}

.psychic{
  background-color: #F85888;
  color:white;
}

.ghost{
  background-color:#705898;
  color:white;
}

.ice{
  background-color: #98D8D8;
  color:white;
}

.rock{
  background-color: #B8A038;
  color:white;
}

.dragon{
  background-color:#7038F8;
  color:white;
}

.dark{
  background-color:#705848;
  color:white;
}

.steel{
  background-color:#B8B8D0;
  color:white;
}

